# descartes-data-sci

./: .gitignore  01-tuto_xarray.ipynb  02-rescale_rasters_and_pricing.ipynb  03-classification_ignition_points.ipynb  Dockerfile  INSTRUCTIONS.md  app.py  pyproject.toml
classification/: model.py  processing.py
