[tool.poetry]
name = "data-scientist-technical-test"
version = "0.0.0"
description = "Descartes Underwriting - Data Scientist Technical Test"
authors = ["Daniel Altunay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lazypredict = "^0.2.12"
matplotlib = "^3.8.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
scikit-learn = "<1.2"
seaborn = "^0.13.2"
streamlit = "^1.31.0"
watchdog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
