[tool.poetry]
name = "data-scientist-technical-test"
version = "0.0.0"
description = "Descartes Underwriting - Data Scientist Technical Test"
authors = ["Daniel Altunay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
ipykernel = "^6.29.0"
ipywidgets = "^8.1.1"
lazypredict = "^0.2.12"
matplotlib = "^3.8.2"
numpy = ">=1.16.0,<1.26"
pandas = "^2.2.0"
scikit-learn = "<1.2"
seaborn = ">=0.10.1,<0.13"
streamlit = "^1.31.0"
watchdog = "^3.0.0"
ydata-profiling = "^4.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
